--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-streamlit>=1.28.0
-pandas>=1.5.0
-numpy>=1.20.0
-scikit-learn>=1.2.0
-joblib>=1.2.0
-plotly>=5.0.0
-lightgbm>=4.0.0
+streamlit==1.51.0
+pandas==2.2.3
+numpy==2.2.3
+scikit-learn==1.6.2
+joblib==1.4.2
+plotly==6.5.0
+lightgbm==4.6.0
